--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <li>Computer Science Foundamentals</li>
     </ul>
     <hr>
-    <h3>Work Experience</h3>
+    <h3>Work Experiences</h3>
     
     
     <table cellspacing="10">
