Added "return home" footer

--- a/contactme.html
+++ b/contactme.html
@@ -21,5 +21,7 @@
         <input type="submit" name=""><br>
         
     </form>
-</body>
+    <footer>
+<a href="index.html">Return Home</a>
+</footer>
 </html>
