--- a/index.html
+++ b/index.html
@@ -4,27 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cobooy's Personal Site</title>
+    <link rel="stylesheet" href="css/styles.css">
+
+
 </head>
+
+
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="https://i.pinimg.com/originals/1d/b1/c6/1db1c6f4d22e9e00210964922f0eb127.jpg" width="200" height="325" alt="my twin"></td>
+            <td><img src="bengalcircle.png" width="325" height="325" alt="my twin"></td>
             <td><h1>Coboony</h1></td>
         </tr>
         <td>
-            <p><em>Founder and CTO of <strong><a href="https://www.appbrewery.co/">The App Brewery.</a></strong></em></p>
-            <p>My name is Coboony and I am learning to be a front-end web developer.</p>
+            <p><em>CTO of <strong><a href="https://www.appbrewery.co/">The App Brewery.</a></strong></em></p>
+            <p class=".paragraph">My name is Coboony and I am learning to be a front-end web developer.</p>
         </td>
     </table>
    
-    <hr size="3" noshade=$0>
-    <h3>Education</h3>
+    <hr>
+    <h3>Education</h3> 
     <ul>
         <li>Web Development Bootcamp</li>
         <li>Computer Science Foundamentals</li>
     </ul>
-    <hr size="3" noshade=$0>
-    <h3>Work Experience</h3>
+    <hr>
+    <h3>Work Experiences</h3>
     
     
     <table cellspacing="10">
@@ -49,7 +54,7 @@
             <td>Photographer</td>
         </tr>
     </table>
-    <hr size="3" noshade=$0>
+    <hr>
 
     <h3>Skills</h3>
     <table cellspacing="10">
@@ -64,7 +69,9 @@
         </tr>
     </table>
 
-    <hr size="3" noshade=$0>
+
+
+    <hr>
 
     <a href="hobbies.html">My Hobbies</a>
     <br>
