changed table image

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="bengalcircle.png" width="325" height="325" alt="my twin"></td>
+            <td><img src="john.png" width="325" height="325" alt="my twin"></td>
             <td><h1>Coboony</h1></td>
         </tr>
         <td>
